[tool]
[tool.poetry]
name = "quart-events"
version = "0.4.3"
description = "aquart extension to facilitate event message brokering"
authors = ["Kyle Smith <smithk86@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/smithk86/quart-events"
classifiers = [
    "Intended Audience :: Developers",
    "Environment :: Web Environment",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.8"
quart = "*"
asyncio-multisubscriber-queue = "*"

[tool.poetry.group.dev.dependencies]
mypy = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-mypy = "*"

[tool.poetry.scripts]
pytest = "pytest:main"

[tool.poetry.plugins]
pytest11 = { quart_events = "quart_events.pytest_plugin" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--mypy"
asyncio_mode = "strict"
